compiler/testData/diagnostics/tests/regressions/itselfAsUpperBoundInClassNotNull.kt
class MyClass<<!CYCLIC_GENERIC_UPPER_BOUND!>T: T<!>>